# blaupause

./: .gitignore  Cargo.toml  README.md  index.html  tags
assets/: sw.js
src/: app.rs  lib.rs  main.rs
