# This file is part of blaupause.
#
# Copyright (C) 2025 Christian Rickert
#
# blaupause is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free Software
# Foundation, version 3.
#
# blaupause is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
# PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with
# this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "blaupause"
version = "0.1.0"
authors = ["Christian Rickert <rc.email@icloud.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "wayland",       # To support newer Linux (and CI)
    "x11",           # To support older Linux (and CI)
] }
rfd = "0.15.3"  # native file dialogs
which = "7.0.3"

[profile.release]
opt-level = 2 # fast and small
