# This file is part of blaupause.
#
# Copyright (C) 2025 The Regents of the University of Colorado
#
# blaupause is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free Software
# Foundation, version 3.
#
# blaupause is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
# PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with
# this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "blaupause"
version = "0.2.0"
authors = ["Christian Rickert <christian.rickert@cuanschutz.edu>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "LICENSE", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "wayland",       # To support newer Linux (and CI)
    "x11",           # To support older Linux (and CI)
] }
egui = "0.33"  # graphical user interface
rfd = "0.15.4"  # native file dialogs
which = "8.0.0"  # same as native command

[profile.release]
opt-level = 2 # fast and small
